[Aptos Framework][API][Transaction][VM] Add a richer multisig account model (#5894)
* [Aptos Framework] Add multisig account module

* [API] Add new multisig transaction type

* [VM] Add execution support for the newly added multisig transaction type

* [API][VM] Make the inner payload of multisig tx extensible

* [VM][Simulation API] Skip multisig prologue when simulating a multisig tx

--- a/testsuite/generate-format/tests/staged/consensus.yaml
+++ b/testsuite/generate-format/tests/staged/consensus.yaml
@@ -349,6 +349,19 @@ MultiEd25519PublicKey:
   NEWTYPESTRUCT: BYTES
 MultiEd25519Signature:
   NEWTYPESTRUCT: BYTES
+Multisig:
+  STRUCT:
+    - multisig_address:
+        TYPENAME: AccountAddress
+    - transaction_payload:
+        OPTION:
+          TYPENAME: MultisigTransactionPayload
+MultisigTransactionPayload:
+  ENUM:
+    0:
+      EntryFunction:
+        NEWTYPE:
+          TYPENAME: EntryFunction
 Payload:
   ENUM:
     0:
@@ -569,6 +582,10 @@ TransactionPayload:
       EntryFunction:
         NEWTYPE:
           TYPENAME: EntryFunction
+    3:
+      Multisig:
+        NEWTYPE:
+          TYPENAME: Multisig
 TwoChainTimeout:
   STRUCT:
     - epoch: U64
