--- a/Cargo.toml
+++ b/Cargo.toml
@@ -324,7 +324,7 @@ bytes = "1.1.0"
 chrono = { version = "0.4.19", features = ["clock", "serde"] }
 cfg-if = "1.0.0"
 claims = "0.7"
-clap = { version = "3.2.17", features = ["derive", "env", "suggestions"] }
+clap = { version = "3.2.23", features = ["derive", "env", "suggestions"] }
 clap_complete = "3.2.3"
 cloud-storage = { version = "0.11.1", features = ["global-client"] }
 codespan-reporting = "0.11.1"
@@ -426,8 +426,8 @@ quote = "1.0.18"
 rand = "0.7.3"
 rand_core = "0.5.1"
 rayon = "1.5.2"
-redis = { version = "0.22.3", features = ["tokio-comp"] }
-redis-test = "0.1.0"
+redis = { version = "0.22.3", features = ["tokio-comp", "script"] }
+redis-test = { version = "0.1.1", features = ["aio"] }
 regex = "1.5.5"
 reqwest = { version = "0.11.11", features = ["blocking", "cookies", "json", "stream"] }
 reqwest-middleware = "0.2.0"
