[AIP-6] Add support for stake delegations (#6075)

--- a/aptos-move/aptos-release-builder/data/release.yaml
+++ b/aptos-move/aptos-release-builder/data/release.yaml
@@ -15,6 +15,7 @@ feature_flags:
     - blake2b256_native
     - resource_groups
     - multisig_accounts
+    - delegation_pools
   disabled: []
 is_multi_step: true
 framework_release_at_end: true
