--- a/aptos-move/aptos-release-builder/data/release.yaml
+++ b/aptos-move/aptos-release-builder/data/release.yaml
@@ -16,6 +16,7 @@ feature_flags:
     - resource_groups
     - multisig_accounts
     - delegation_pools
+    - bls12381_basic_operations
   disabled: []
 is_multi_step: true
 framework_release_at_end: true
