add processors to indexer grpc system. (#7012)

--- a/.dockerignore
+++ b/.dockerignore
@@ -22,6 +22,7 @@
 !crates/aptos/src/move_tool/*.bpl
 !api/doc/
 !crates/indexer/migrations/**/*.sql
+!ecosystem/indexer-grpc/indexer-grpc-parser/migrations/**/*.sql
 !terraform/helm/aptos-node/
 !terraform/helm/genesis/
 !testsuite/forge/src/backend/k8s/
