[qs] remove fragments and refactor types around batch

--- a/testsuite/generate-format/tests/staged/consensus.yaml
+++ b/testsuite/generate-format/tests/staged/consensus.yaml
@@ -40,28 +40,42 @@ AggregateSignatureWithRounds:
         SEQ: U64
 Batch:
   STRUCT:
-    - source:
-        TYPENAME: AccountAddress
     - batch_info:
         TYPENAME: BatchInfo
     - payload:
-        SEQ:
-          TYPENAME: SignedTransaction
+        TYPENAME: BatchPayload
 BatchId:
   STRUCT:
     - id: U64
     - nonce: U64
 BatchInfo:
   STRUCT:
-    - epoch: U64
+    - author:
+        TYPENAME: AccountAddress
+    - batch_id:
+        TYPENAME: BatchId
+    - expiration:
+        TYPENAME: LogicalTime
     - digest:
         TYPENAME: HashValue
+    - num_txns: U64
+    - num_bytes: U64
+BatchMsg:
+  STRUCT:
+    - batch:
+        TYPENAME: Batch
+BatchPayload:
+  STRUCT:
+    - txns:
+        SEQ:
+          TYPENAME: SignedTransaction
 BatchRequest:
   STRUCT:
+    - epoch: U64
     - source:
         TYPENAME: AccountAddress
-    - batch_info:
-        TYPENAME: BatchInfo
+    - digest:
+        TYPENAME: HashValue
 BitVec:
   STRUCT:
     - inner: BYTES
@@ -215,21 +229,21 @@ ConsensusMsg:
         NEWTYPE:
           TYPENAME: CommitDecision
     9:
-      FragmentMsg:
+      BatchMsg:
         NEWTYPE:
-          TYPENAME: Fragment
+          TYPENAME: BatchMsg
     10:
       BatchRequestMsg:
         NEWTYPE:
           TYPENAME: BatchRequest
     11:
-      BatchMsg:
+      BatchResponse:
         NEWTYPE:
           TYPENAME: Batch
     12:
-      SignedDigestMsg:
+      SignedBatchInfo:
         NEWTYPE:
-          TYPENAME: SignedDigest
+          TYPENAME: SignedBatchInfo
     13:
       ProofOfStoreMsg:
         NEWTYPE:
@@ -283,24 +297,6 @@ EventKey:
     - creation_number: U64
     - account_address:
         TYPENAME: AccountAddress
-Fragment:
-  STRUCT:
-    - source:
-        TYPENAME: AccountAddress
-    - fragment_info:
-        TYPENAME: FragmentInfo
-FragmentInfo:
-  STRUCT:
-    - epoch: U64
-    - batch_id:
-        TYPENAME: BatchId
-    - fragment_id: U64
-    - payload:
-        SEQ:
-          TYPENAME: SerializedTransaction
-    - maybe_expiration:
-        OPTION:
-          TYPENAME: LogicalTime
 HashValue:
   STRUCT:
     - hash:
@@ -376,7 +372,7 @@ Payload:
 ProofOfStore:
   STRUCT:
     - info:
-        TYPENAME: SignedDigestInfo
+        TYPENAME: BatchInfo
     - multi_signature:
         TYPENAME: AggregateSignature
 ProofWithData:
@@ -419,32 +415,16 @@ Script:
     - args:
         SEQ:
           TYPENAME: TransactionArgument
-SerializedTransaction:
-  STRUCT:
-    - bytes: BYTES
 Signature:
   NEWTYPESTRUCT: BYTES
-SignedDigest:
+SignedBatchInfo:
   STRUCT:
-    - epoch: U64
     - signer:
         TYPENAME: AccountAddress
     - info:
-        TYPENAME: SignedDigestInfo
+        TYPENAME: BatchInfo
     - signature:
         TYPENAME: Signature
-SignedDigestInfo:
-  STRUCT:
-    - batch_author:
-        TYPENAME: AccountAddress
-    - batch_id:
-        TYPENAME: BatchId
-    - digest:
-        TYPENAME: HashValue
-    - expiration:
-        TYPENAME: LogicalTime
-    - num_txns: U64
-    - num_bytes: U64
 SignedTransaction:
   STRUCT:
     - raw_txn:
