--- a/aptos-node/Cargo.toml
+++ b/aptos-node/Cargo.toml
@@ -67,6 +67,7 @@ maplit = { workspace = true }
 rand = { workspace = true }
 rayon = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 tokio = { workspace = true }
 tokio-stream = { workspace = true }
 url = { workspace = true }
