--- a/Cargo.toml
+++ b/Cargo.toml
@@ -315,6 +315,11 @@ again = "0.1.2"
 anyhow = "1.0.62"
 arc-swap = "1.5.0"
 arr_macro = "0.1.3"
+ark-bls12-381 = "0.4.0"
+ark-ec = "0.4.0"
+ark-ff = "0.4.0"
+ark-serialize = "0.4.0"
+ark-std = { version = "0.4.0", features = ["getrandom"] }
 assert_approx_eq = "1.1.0"
 assert_unordered = "0.1.1"
 async-stream = "0.3"
