[Quorum Store] block timestamp-based expiration of batches (#7194)
### Description

Previously, batches were expired using logical time, i.e., (epoch, round). Validators set batch expiration based on their local logical time. For validators that fell behind in consensus, this causes an issue where batches they create are more likely to not reach quorum or expire after quorum, as other validators have a more advanced round. There were several gap buffers introduced to try to mitigate this, which added complexity.

In this PR, logical time is replaced with system clock times (for creation) and block timestamp times (for expiration). Validators set expiration when creating a batch using their local clock time. The system clock is less likely to fall behind than round times (it doesn't depend on consensus progress). Expiration is based on the block timestamp, which is monotonically increasing on committed blocks, so all validators will still see the same expiration at the same round.

This simplifies things, now there is a single expiration limit (default to 60 seconds) at batch creation time.

### Test Plan

Ran land-blocking and three regions tests and did not see any regression.

--- a/testsuite/generate-format/tests/staged/consensus.yaml
+++ b/testsuite/generate-format/tests/staged/consensus.yaml
@@ -54,8 +54,8 @@ BatchInfo:
         TYPENAME: AccountAddress
     - batch_id:
         TYPENAME: BatchId
-    - expiration:
-        TYPENAME: LogicalTime
+    - epoch: U64
+    - expiration: U64
     - digest:
         TYPENAME: HashValue
     - num_txns: U64
@@ -323,10 +323,6 @@ LedgerInfoWithV0:
         TYPENAME: LedgerInfo
     - signatures:
         TYPENAME: AggregateSignature
-LogicalTime:
-  STRUCT:
-    - epoch: U64
-    - round: U64
 Module:
   STRUCT:
     - code: BYTES
