Ed25519 PK validation in Move should return `None` instead of aborting on wrong length (#7043)
* Timed feature flag for ed25519 abort

* started normal feature ed25519 abort

* ed25519 abort as normal feature flag start

* more code for adding ed25519 abort feature flag

* use new api from alin/native-feature-flag-context

* add move function to access ed25519 abort feature flag

* remove getter functions for flag

* add ED25519 prefix to flag

* added missing match clause

--- a/aptos-move/aptos-release-builder/data/release.yaml
+++ b/aptos-move/aptos-release-builder/data/release.yaml
@@ -16,6 +16,7 @@ feature_flags:
     - resource_groups
     - multisig_accounts
     - delegation_pools
+    - ed25519_pubkey_validate_return_false_wrong_length  
   disabled: []
 is_multi_step: true
 framework_release_at_end: true
