--- a/.dockerignore
+++ b/.dockerignore
@@ -30,3 +30,4 @@
 !terraform/helm/genesis/
 !testsuite/forge/src/backend/k8s/
 !third_party/move/move-prover/boogie-backend/**/*.bpl
+!testsuite/testcases/src/data/
