[genesis] enable new input type parsing for devnet

--- a/aptos-move/aptos-release-builder/data/release.yaml
+++ b/aptos-move/aptos-release-builder/data/release.yaml
@@ -20,6 +20,7 @@ update_sequence:
         - multisig_accounts
         - delegation_pools
         - ed25519_pubkey_validate_return_false_wrong_length
+        - struct_constructors
       disabled: []
   - Consensus:
       V1:
