--- a/network/peer-monitoring-service/client/Cargo.toml
+++ b/network/peer-monitoring-service/client/Cargo.toml
@@ -34,6 +34,7 @@ tokio = { workspace = true }
 
 [dev-dependencies]
 aptos-config = { workspace = true }
+aptos-build-info = { workspace = true }
 aptos-netcore = { workspace = true }
 aptos-network = { workspace = true, features = ["fuzzing"] }
 aptos-peer-monitoring-service-server = { workspace = true }
