Simplify managed_fungible_asset example further to not need users to pass Object<FungibleAssetMetadata>

--- a/aptos-move/move-examples/fungible_asset/Move.toml
+++ b/aptos-move/move-examples/fungible_asset/Move.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 
 [addresses]
 aptos_framework = "0x1"
-fungible_asset = "_"
+fungible_asset = "0xcafe"
 
 [dependencies]
 AptosFramework = { local = "../../framework/aptos-framework" }
