--- a/.github/workflows/module-verify.yaml
+++ b/.github/workflows/module-verify.yaml
@@ -30,7 +30,7 @@ concurrency:
 
 jobs:
   verify-modules-testnet:
-    if: ${{ github.event_name == 'workflow_dispatch' && inputs.CHAIN_NAME == 'testnet' || inputs.CHAIN_NAME == 'all' }}
+    if: ${{ github.event_name == 'workflow_dispatch' && (inputs.CHAIN_NAME == 'testnet' || inputs.CHAIN_NAME == 'all') }}
     uses: aptos-labs/aptos-core/.github/workflows/workflow-run-module-verify.yaml@main
     secrets: inherit
     with:
@@ -43,7 +43,7 @@ jobs:
       TIMEOUT_MINUTES: 10
 
   verify-modules-mainnet:
-    if: ${{ github.event_name == 'workflow_dispatch' && inputs.CHAIN_NAME == 'mainnet' || inputs.CHAIN_NAME == 'all' }}
+    if: ${{ github.event_name == 'workflow_dispatch' && (inputs.CHAIN_NAME == 'mainnet' || inputs.CHAIN_NAME == 'all') }}
     uses: aptos-labs/aptos-core/.github/workflows/workflow-run-module-verify.yaml@main
     secrets: inherit
     with:
