--- a/Cargo.toml
+++ b/Cargo.toml
@@ -556,6 +556,7 @@ tracing = "0.1.34"
 tracing-subscriber = "0.3.11"
 trybuild = "1.0.41"
 tokio = { version = "1.21.0", features = ["full"] }
+tokio-io-timeout = "1.2.0"
 tokio-metrics = "0.1.0"
 tokio-retry = "0.3.0"
 tokio-stream = "0.1.8"
