--- a/storage/backup/backup-cli/Cargo.toml
+++ b/storage/backup/backup-cli/Cargo.toml
@@ -48,6 +48,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 tokio = { workspace = true }
+tokio-io-timeout = { workspace = true }
 tokio-stream = { workspace = true }
 tokio-util = { workspace = true }
 
