Migrate move-stdlib native functions into framework in aptos-core (#7487)
* move dir

* add back nursery

* add ascii

* docs

* restore dir

* restore dir

* restore dir

* revert move changes

* rename

* rwname move-stdlib

* fmt

* add

* fmt

* remove ascii

* overview

* Remove unused files/code

* Remove more

* delete typename

* Change copyright

* Change copyright

* sort deps

* sort deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -180,7 +180,6 @@ members = [
     # "third_party/move/move-prover/mutation",
     "third_party/move/move-prover/test-utils",
     "third_party/move/move-prover/tools/spec-flatten",
-    "third_party/move/move-stdlib",
     "third_party/move/move-symbol-pool",
     "third_party/move/move-vm/integration-tests",
     "third_party/move/move-vm/paranoid-tests",
@@ -600,7 +599,7 @@ move-package = { path = "third_party/move/tools/move-package" }
 move-prover = { path = "third_party/move/move-prover" }
 move-prover-boogie-backend = { path = "third_party/move/move-prover/boogie-backend" }
 move-stackless-bytecode = { path = "third_party/move/move-prover/bytecode" }
-move-stdlib = { path = "third_party/move/move-stdlib" }
+aptos-move-stdlib = { path = "aptos-move/framework/move-stdlib" }
 move-prover-test-utils = { path = "third_party/move/move-prover/test-utils" }
 move-resource-viewer = { path = "third_party/move/tools/move-resource-viewer" }
 move-stackless-bytecode-interpreter = { path = "third_party/move/move-prover/interpreter" }
