Run faucet tests for testnet on high-perf-docker (#7604)

--- a/.github/workflows/faucet-tests.yaml
+++ b/.github/workflows/faucet-tests.yaml
@@ -27,7 +27,7 @@ jobs:
           NETWORK: devnet
           GCP_DOCKER_ARTIFACT_REPO: ${{ secrets.GCP_DOCKER_ARTIFACT_REPO }}
   run-tests-testnet:
-    runs-on: ubuntu-latest
+    runs-on: high-perf-docker
     permissions:
       contents: read
       id-token: write
