--- a/storage/backup/backup-cli/src/storage/command_adapter/sample_configs/azure.sample.yaml
+++ b/storage/backup/backup-cli/src/storage/command_adapter/sample_configs/azure.sample.yaml
@@ -26,7 +26,10 @@ commands:
     azcopy cp --from-to BlobPipe "https://$ACCOUNT.blob.core.windows.net/$CONTAINER/$SUB_DIR/$FILE_HANDLE$SAS" < /dev/null | gzip -cd
   save_metadata_line: |
     # save the line to a new file under the metadata folder
-    gzip -c | azcopy cp --from-to PipeBlob "https://$ACCOUNT.blob.core.windows.net/$SUBDIR/metadata/$FILE_NAME$SAS"
+    FILE_HANDLE="metadata/$FILE_NAME"
+    echo "$FILE_HANDLE"
+    exec 1>&-
+    gzip -c | azcopy cp --from-to PipeBlob "https://$ACCOUNT.blob.core.windows.net/$SUBDIR/$FILE_HANDLE$SAS" > /dev/null
   list_metadata_files: |
     # list files under the metadata folder
     (azcopy ls "https://$ACCOUNT.blob.core.windows.net/$CONTAINER/$SUB_DIR/metadata/$SAS" ||:) \
