--- a/testsuite/forge-test-runner-template.yaml
+++ b/testsuite/forge-test-runner-template.yaml
@@ -42,7 +42,7 @@ spec:
           key: token
           optional: true
     - name: RUST_BACKTRACE
-      value: 1
+      value: "1"
     # - name: RUST_LOG
     #   value: debug
   affinity:
