--- a/Cargo.toml
+++ b/Cargo.toml
@@ -524,6 +524,7 @@ rstest = "0.15.0"
 rusty-fork = "0.3.0"
 sha-1 = "0.10.0"
 sha2 = "0.9.3"
+sha2_0_10_6 = { package = "sha2", version = "0.10.6" }
 sha3 = "0.9.1"
 siphasher = "0.3.10"
 serde = { version = "1.0.137", features = ["derive", "rc"] }
