--- a/storage/db-tool/Cargo.toml
+++ b/storage/db-tool/Cargo.toml
@@ -20,10 +20,13 @@ aptos-db = { workspace = true, features = ["db-debugger"] }
 aptos-executor-types = { workspace = true }
 aptos-logger = { workspace = true }
 aptos-push-metrics = { workspace = true }
+aptos-state-view = { workspace = true }
+aptos-storage-interface = { workspace = true }
 aptos-temppath = { workspace = true }
 aptos-types = { workspace = true }
 async-trait = { workspace = true }
 clap = { workspace = true }
+itertools = { workspace = true }
 owo-colors = { workspace = true }
 tokio = { workspace = true }
 
