--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -24,6 +24,7 @@ aptos-temppath = { workspace = true }
 aptos-types = { workspace = true }
 bcs = { workspace = true }
 byteorder = { workspace = true }
+cfg-if = { workspace = true }
 get_if_addrs = { workspace = true }
 mirai-annotations = { workspace = true }
 poem-openapi = { workspace = true }
