[storage] resolve test flakyness by using avaliable port

--- a/storage/db-tool/Cargo.toml
+++ b/storage/db-tool/Cargo.toml
@@ -31,5 +31,6 @@ owo-colors = { workspace = true }
 tokio = { workspace = true }
 
 [dev-dependencies]
+aptos-backup-cli = { workspace = true, features = ["testing"] }
 aptos-backup-service = { workspace = true }
 aptos-executor-test-helpers = { workspace = true }
