--- a/developer-docs-site/package.json
+++ b/developer-docs-site/package.json
@@ -42,8 +42,13 @@
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^8.0.7",
     "rehype-katex": "^5.0.0",
+    "rehype-raw": "^6.1.1",
+    "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
     "remark-math": "^3.0.1",
+    "remark-stringify": "^10.0.2",
     "shelljs": "^0.8.5",
     "stream": "^0.0.2",
     "ts-node": "^10.9.1",
