--- a/crates/aptos-protos/proto/buf.yaml
+++ b/crates/aptos-protos/proto/buf.yaml
@@ -1,13 +1,23 @@
 version: v1
 
+# detect breaking changes
+breaking:
+  use:
+    - FILE
+
 # lint contains the options for lint rules.
 lint:
   use:
     - DEFAULT
-  except:
-    # Avoid generated code with service like `FooServiceService`.
-    - SERVICE_SUFFIX
   ignore_only:
     PACKAGE_VERSION_SUFFIX:
       # Timestamp package is well-adpoted and we don't want to change it.
       - aptos/util/timestamp/timestamp.proto
+    SERVICE_SUFFIX:
+      # ServiceService is annoying; let's not follow this.
+      - aptos/indexer/v1/raw_data.proto
+      - aptos/internal/fullnode/v1/fullnode_data.proto
+    RPC_RESPONSE_STANDARD_NAME:
+      # We may reuse the response.
+      - aptos/indexer/v1/raw_data.proto
+      - aptos/internal/fullnode/v1/fullnode_data.proto
