--- a/crates/aptos/Cargo.toml
+++ b/crates/aptos/Cargo.toml
@@ -54,12 +54,15 @@ futures = { workspace = true }
 hex = { workspace = true }
 itertools = { workspace = true }
 move-binary-format = { workspace = true }
+move-bytecode-source-map = { workspace = true }
 move-cli = { workspace = true }
 move-command-line-common = { workspace = true }
 move-compiler = { workspace = true }
 move-core-types = { workspace = true }
 move-coverage = { workspace = true }
 move-disassembler = { workspace = true }
+move-ir-compiler = { workspace = true }
+move-ir-types = { workspace = true }
 move-package = { workspace = true }
 move-prover = { workspace = true }
 move-prover-boogie-backend = { workspace = true }
