--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -41,4 +41,5 @@ aptos-types = { workspace = true, features = ["fuzzing"] }
 [features]
 default = []
 fuzzing = ["aptos-crypto/fuzzing", "aptos-types/fuzzing"]
+network-perf-test = []
 testing = []
