--- a/aptos-move/aptos-release-builder/data/release.yaml
+++ b/aptos-move/aptos-release-builder/data/release.yaml
@@ -1,6 +1,18 @@
 ---
 remote_endpoint: ~
 proposals:
+  - name: step_0
+    metadata:
+      title: "Enable the new signature checker"
+      description: "This enables the improved signature checker implementation."
+      source_code_url: "TBD"
+      discussion_url: "https://github.com/aptos-labs/aptos-core/pull/7856"
+    execution_mode: MultiStep
+    update_sequence:
+    - FeatureFlag:
+        enabled:
+          - signature_checker_v2
+        disabled: []
   - name: step_1
     metadata:
       title: "Enable Struct Constructor Feature"
