--- a/ecosystem/typescript/sdk/package.json
+++ b/ecosystem/typescript/sdk/package.json
@@ -1,6 +1,7 @@
 {
   "name": "aptos",
   "description": "Aptos SDK",
+  "packageManager": "pnpm@8.3.1",
   "license": "Apache-2.0",
   "engines": {
     "node": ">=11.0.0"
