--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,7 @@ aptos-move/aptos-vm-profiling/**/*.txt
 metadata-cache
 /local/
 run_*
+
+# test files for indexer GRPC
+test_indexer_grpc_*.yaml
+test_indexer_grpc/*
