--- a/aptos-move/aptos-transaction-benchmarks/Cargo.toml
+++ b/aptos-move/aptos-transaction-benchmarks/Cargo.toml
@@ -17,8 +17,12 @@ aptos-bitvec = { workspace = true }
 aptos-crypto = { workspace = true }
 aptos-gas = { workspace = true, features = ["testing"] }
 aptos-language-e2e-tests = { workspace = true }
+aptos-logger = { workspace = true }
+aptos-metrics-core = { workspace = true }
+aptos-push-metrics =  { workspace = true }
 aptos-types = { workspace = true }
 aptos-vm = { workspace = true }
+clap = { workspace = true }
 criterion = { workspace = true }
 criterion-cpu-time = { workspace = true }
 num_cpus = { workspace = true }
